@@ -1,3 +1,12 @@
+2003-12-29 Damien Sandras  <dsandras@seconix.com>
+
+	* src/lid.cpp, src/lid.h, src/config.cpp, src/endpoint.cpp:
+	Made GMLid a descendant of OpalIxJDevice so that methods from
+	the latter can be used in the first.
+	
+	* src/sound_handling.cpp: Added calls to suspend the audio daemon
+	in the sound test. Thanks to Jan Schampera for noticing this.
+	
 2003-12-28 Damien Sandras  <dsandras@seconix.com>
 
 	* src/callbacks.cpp: Save the position of the prefs window
